<resources>
    <string name="app_name">Shopping List</string>
    <string name="user_name_hint">user name</string>
    <string name="sendForText">Type the user u want to send for in the field above</string>
    <string name="add_a_new_shopping_item">Add a new Shopping Item</string>
    <string name="name_hint">Name</string>
    <string name="amount">Amount</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="price_for_one_item">Price for one item</string>
    <string name="choose_a_unique_nickname">Choose a unique nickname</string>
    <string name="nickname">Nickname</string>
    <string name="save">SAVE</string>
    <string name="total_price">Total Price</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="user_name">User name</string>
    <string name="sender_name">Sender name</string>
    <string name="check">Check </string>
    <string name="clear">Clear</string>
    <string name="u_don_t_have_any_receved_lists">U don\'t have any received lists</string>
    <string name="name">Name</string>
    <string name="price">Price $</string>
    <string name="username2">Username:</string>
    <string name="nickname2">Nickname:</string>
    <string name="new_nickname_saved">New nickname saved</string>
    <string name="must">Nickname must contain at least 6 letters</string>
    <string name="your_nickname_now">"Your nickname now: "</string>
    <string name="you_have_new_list">you have new list</string>
    <string name="new_list_recived">new list received</string>
    <string name="u_dont_have_any_list_to_send">u don\'t have any list to send</string>
    <string name="confirm">Confirm Alert</string>
    <string name="are_u_sure_u_want">"Are you sure u want send your list to "</string>
    <string name="cleared">Cleared!</string>
    <string name="u_cant_use_this_feature">U can\'t use this feature without internet</string>
    <string name="please_enter_vaild_name">Please enter a name</string>
    <string name="please_enter_vaild_amount">Please enter a valid amount</string>
    <string name="list_sent_to">"List sent to "</string>
    <string name="u_cant_add_less_than_1">U can\'t add less than 0 amount</string>
    <string name="sign_out">Sign out</string>
    <string name="change_nickname">Change Nickname</string>
    <string name="saved_successfully_as">Saved successfully as</string>
    <string name="u_cant_leave_empty_filed">U can\'t leave empty filed</string>
    <string name="edit">"Edit: "</string>
    <string name="long_click">Long click to edit the item</string>
    <string name="edit_mode">Edit mode</string>
</resources>